--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "linkshare",
   "version": "1.0.0",
   "description": "Share link",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,9 +15,5 @@
   "bugs": {
     "url": "https://github.com/ihimanshubhutani/linkShare/issues"
   },
-  "homepage": "https://github.com/ihimanshubhutani/linkShare#readme",
-  "dependencies": {
-    "express": "^4.17.1",
-    "socket.io": "^2.3.0"
-  }
+  "homepage": "https://github.com/ihimanshubhutani/linkShare#readme"
 }
