--- a/package.json
+++ b/package.json
@@ -1,24 +1,19 @@
 {
-  "name": "linkshare",
+  "name": "linkshare-app",
   "version": "1.0.0",
-  "description": "Share link",
+  "description": "link share app",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ihimanshubhutani/linkShare.git"
-  },
-  "author": "Himanshu",
+  "author": "Himanshu Bhutani",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ihimanshubhutani/linkShare/issues"
-  },
-  "homepage": "https://github.com/ihimanshubhutani/linkShare#readme",
   "dependencies": {
+    "cookie-parser": "^1.4.5",
+    "ejs": "^3.1.2",
     "express": "*",
-    "socket.io": "^2.3.0"
+    "play-sound": "^1.1.3",
+    "socket.io": "*"
   }
 }
